<resources>
    <string name="app_name">QuizApp</string>
    <string name="your_name">What\'s your name?</string>
    <string name="q1_title">NASA Missions</string>
    <string name="q1_intro">NASA has added five missions to its orbiting Earth-observing fleet in 2014 - the biggest one-year increase in more than a decade.</string>
    <string name="q1_question">Which of the following missions was launched in the year of 2014?</string>
    <string name="q1_hyp1">Global Precipitation Measurement (GPM)</string>
    <string name="q1_hyp2">Ocean Surface Topography Mission (OSTM)</string>
    <string name="q1_hyp3">Tropical Rainfall Measuring Mission (TRMM)</string>
    <string name="q1_hyp4">Solar Radiation and Climate Experiment (SRCE)</string>
    <string name="q2_title">Cocoa Origins</string>
    <string name="q2_intro">Cocoa grows best in shady, moist rain-forests which is why climate change and deforestation pose such a threat to chocolate supplies.</string>
    <string name="q2_question">Which two countries are responsible for over 70% of the world\'s cocoa supply?</string>
    <string name="q2_hyp1">Côte d’Ivoire and Brazil</string>
    <string name="q2_hyp2">Côte d’Ivoire and Ghana</string>
    <string name="q2_hyp3">Brazil and Malaysia</string>
    <string name="q2_hyp4">Costa Rica and Ghana</string>
    <string name="q2_comment">When you buy chocolate, be sure to support farmers and the environment by purchasing Rainforest Alliance Certified products.</string>
    <string name="q3_title">Saving Endangered Species</string>
    <string name="q3_intro">In 2017, the Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES) added new species to its protected list. This means that global trade of these species became restricted.</string>
    <string name="q3_question">Which two species were added to the protected list?</string>
    <string name="q3_hyp1">Manta Ray</string>
    <string name="q3_hyp2">Siberian (or Amur) Tiger</string>
    <string name="q3_hyp3">Chilean Sea Bass</string>
    <string name="q3_hyp4">Mountain Gorilla</string>
    <string name="q4_title">Antibiotics</string>
    <string name="q4_intro">Although the Food and Drug Administration has repeatedly stated that nontherapeutic use of antibiotics on livestock is unsafe, the US continues to allow these drugs to be used. Other countries have taken the threat more seriously.</string>
    <string name="q4_question">In addition to the entire European Union, which of the following has banned growth-promoting antibiotics for livestock?</string>
    <string name="q4_hyp1">Taiwan</string>
    <string name="q4_hyp2">Australia</string>
    <string name="q4_hyp3">Ukraine</string>
    <string name="q4_hyp4">Brazil</string>
    <string name="q4_comment">In 2005, Taiwan banned growth-promoting antibiotics and requires veterinary prescriptions to use antimicrobials for livestock. Taiwan accounts for approximately 2% of annual U.S. export sales of food animal products, primarily in beef and poultry. Learn more about the countries that have restricted antibiotic use on livestock here</string>
    <string name="q5_title">Growing Cities</string>
    <string name="q5_intro">"Population growth in our cities demands sustainable solutions for transportation, buildings and other infrastructure. One hundred years ago, 20% of the world population lived in an urban area.</string>
    <string name="q5_question">"What will the percentage of urban population be by 2050?</string>
    <string name="q5_hyp1">45%</string>
    <string name="q5_hyp2">60%</string>
    <string name="q5_hyp3">70%</string>
    <string name="q5_hyp4">80%</string>
    <string name="q5_comment">According to the World Health Organization: One hundred years ago, 2 out of every 10 people lived in an urban area. By 1990, less than 40% of the global population lived in a city, but as of 2010, more than half of all people live in an urban area. By 2030, 6 out of every 10 people will live in a city, and by 2050, this proportion will increase to 7 out of 10 people.</string>
    <string name="q6_title">Zero Waste</string>
    <string name="q6_intro">Zero waste means all discarded materials are designed to become resources for others to use.  San Francisco, a national leader in waste management, has set an ambitious zero waste goal for the city.</string>
    <string name="q6_question">By what year is San Francisco planning to recycle and compost 100% of its trash?</string>
    <string name="q6_hyp1">2020</string>
    <string name="q6_hyp2">2030</string>
    <string name="q6_hyp3">2035</string>
    <string name="q6_hyp4">2045</string>
    <string name="q6_comment">From the San Francisco Department of the Environment: "The City and County of San Francisco believes achieving zero waste is possible. To achieve 100 percent zero waste, SF Environment will continue to advocate for state legislation and partner with producers to develop a producer responsibility system, where producers design better products and take responsibility for the entire life-cycle of a product, including take-back and recycling."</string>
    <string name="q7_title">LEDs</string>
    <string name="q7_intro">The Times Square New Year\'s Eve ball has come a long way from its first design in 1907. Originally comprised of 100 incandescent light bulbs, the modern ball is filled with a kaleidoscope of thousands of efficient LED lights. LED lightbulbs are 75% more efficient than standard incandescent bulbs and last a lot longer.</string>
    <string name="q7_question">Up to how many years can an LED lightbulb last for?</string>
    <string name="q7_hyp1">15 years</string>
    <string name="q7_hyp2">25 years</string>
    <string name="q7_hyp3">35 years</string>
    <string name="q7_hyp4">45 years</string>
    <string name="q8_title">Energy and Wildlife</string>
    <string name="q8_intro">The Ivanpah solar thermal plant in the Mohave Desert of California went online by the end of 2013. During construction, developers unexpectedly encountered nearly 200 of a particular threatened animal.</string>
    <string name="q8_question">What animal was threatened by the construction of the solar thermal plant?</string>
    <string name="q8_hyp1">Desert salamander</string>
    <string name="q8_hyp2">Desert tortoise</string>
    <string name="q8_hyp3">Kangaroo rat</string>
    <string name="q8_hyp4">Blunt-nosed leopard lizard</string>
    <string name="q8_comment">After finding more tortoises than anticipated, developers relocated them to a different site with the assistance of environmental organizations. The incident illustrated why careful siting is an important part of any kind of energy development.</string>
    <string name="q9_title">The Arctic</string>
    <string name="q9_intro">Although the countries that comprise the Arctic nations have made policy statements underlining the importance of working together, the rapid melting now taking place in the Arctic, combined with increased militarization and tensions around resources, pose a challenge to its stability. Did you know that the U.S. is considered an Arctic nation because its territory extends into the region known as the Arctic Circle? Protecting this region will require the cooperation of every Arctic nation.</string>
    <string name="q9_question">Test your knowledge: How many Arctic nations are there?</string>
    <string name="q9_hyp1">8</string>
    <string name="q9_hyp2">10</string>
    <string name="q9_hyp3">12</string>
    <string name="q9_hyp4">14</string>
    <string name="q9_comment">Norway, Sweden, Finland, Russia, the United States, Canada, Denmark (Greenland, and Iceland are all Arctic nations. In addition, many indigenous communities have lived in the region for thousands of years and they make up 10% of the population there. The film People of a Feather documents seven winters in the lives of one such community.</string>
    <string name="q10_title">Bike Commuting</string>
    <string name="q10_intro">About 40% of trips in the U.S. are taken within 2 miles of home—an ideal distance for riding a bike—yet only a small fraction of people pedal to their destination.  Why is this? One of the biggest factors preventing people from riding bikes is concern for safety. When governments build bike lanes and paths, more people feel comfortable riding a bike.</string>
    <string name="q10_question">The growth in bike commuting in the past decade is a result of cities growing their bike-friendly infrastructure.By what percentage did bike commuting increase in the U.S. between 2000 and 2010?</string>
    <string name="q10_hyp1">5%</string>
    <string name="q10_hyp2">15%</string>
    <string name="q10_hyp3">43%</string>
    <string name="q10_hyp4">73%</string>
    <string name="grade">grade</string>
    <string name="share">share</string>
    <string name="reset">reset</string>
    <string name="results">results</string>
    <string name="image">image</string>
    <string name="guess">guess</string>
    <string name="email">send results by email</string>
    <string name="content_description">image</string>
    <string name="message_line1">%s, your quiz results:\n</string>
    <string name="message_line2">You\'ve got %d out of 10 correct answers\n</string>
    <string name="message_line3"> and %d wrong or unanswered.</string>
    <string name="edit_text1"> %d is the right answer.</string>
    <string name="edit_text2">%d. The right answer is 8.</string>
    <string name="edit_text3">8 is the right answer.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
</resources>