<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/scrollview_margins"
        android:layout_marginRight="@dimen/scrollview_margins">

        <LinearLayout style="@style/linear_layout">

            <!--                                            1st question -->
            <TextView
                style="@style/question_number"
                android:text="@string/one" />

            <TextView
                style="@style/title"
                android:text="@string/q1_title"
                />

            <TextView
                android:id="@+id/textview_q1"
                style="@style/question"
                android:text="@string/q1_question" />

            <RadioGroup
                android:id="@+id/radio_group_q1"
                style="@style/radio">

                <RadioButton
                    android:id="@+id/radio_q1_h1"
                    style="@style/hypothesis"
                    android:text="@string/q1_hyp1" />

                <RadioButton
                    android:id="@+id/radio_q1_h2"
                    style="@style/hypothesis"
                    android:text="@string/q1_hyp2" />

                <RadioButton
                    android:id="@+id/radio_q1_h3"
                    style="@style/hypothesis"
                    android:text="@string/q1_hyp3" />

                <RadioButton
                    android:id="@+id/radio_q1_h4"
                    style="@style/hypothesis"
                    android:text="@string/q1_hyp4" />

            </RadioGroup>

            <Space style="@style/space" />

            <!--                                            2nd question -->
            <TextView
                style="@style/question_number"
                android:text="@string/two" />

            <TextView
                style="@style/title"
                android:text="@string/q2_title" />

            <TextView
                style="@style/question"
                android:text="@string/q2_question" />

            <RadioGroup
                android:id="@+id/radio_group_q2"
                style="@style/radio">

                <RadioButton
                    android:id="@+id/radio_q2_h1"
                    style="@style/hypothesis"
                    android:text="@string/q2_hyp1" />

                <RadioButton
                    android:id="@+id/radio_q2_h2"
                    style="@style/hypothesis"
                    android:text="@string/q2_hyp2" />

                <RadioButton
                    android:id="@+id/radio_q2_h3"
                    style="@style/hypothesis"
                    android:text="@string/q2_hyp3" />

                <RadioButton
                    android:id="@+id/radio_q2_h4"
                    style="@style/hypothesis"
                    android:text="@string/q2_hyp4" />

            </RadioGroup>

            <TextView
                android:id="@+id/q2_comments"
                style="@style/comments"
                android:text="@string/q2_comment" />

            <Space style="@style/space" />

            <!--                                            3rd question -->
            <TextView
                style="@style/question_number"
                android:text="@string/three" />

            <TextView
                style="@style/title"
                android:text="@string/q3_title" />

            <TextView
                style="@style/question"
                android:text="@string/q3_question" />

            <CheckBox
                android:id="@+id/check_q3_h1"
                style="@style/hypothesis"
                android:text="@string/q3_hyp1" />

            <CheckBox
                android:id="@+id/check_q3_h2"
                style="@style/hypothesis"
                android:text="@string/q3_hyp2" />

            <CheckBox
                android:id="@+id/check_q3_h3"
                style="@style/hypothesis"
                android:text="@string/q3_hyp3" />

            <CheckBox
                android:id="@+id/check_q3_h4"
                style="@style/hypothesis"
                android:text="@string/q3_hyp4" />

            <Space style="@style/space" />

            <!--                                            4th question -->

            <TextView
                style="@style/question_number"
                android:text="@string/four" />

            <TextView
                style="@style/title"
                android:text="@string/q4_title" />

            <TextView
                style="@style/question"
                android:text="@string/q4_question" />

            <RadioGroup
                android:id="@+id/radio_group_q4"
                style="@style/radio">

                <RadioButton
                    android:id="@+id/radio_q4_h1"
                    style="@style/hypothesis"
                    android:text="@string/q4_hyp1" />

                <RadioButton
                    android:id="@+id/radio_q4_h2"
                    style="@style/hypothesis"
                    android:text="@string/q4_hyp2" />

                <RadioButton
                    android:id="@+id/radio_q4_h3"
                    style="@style/hypothesis"
                    android:text="@string/q4_hyp3" />

                <RadioButton
                    android:id="@+id/radio_q4_h4"
                    style="@style/hypothesis"
                    android:text="@string/q4_hyp4" />

            </RadioGroup>

            <TextView
                android:id="@+id/q4_comments"
                style="@style/comments"
                android:text="@string/q4_comment" />

            <Space style="@style/space" />

            <!--                                            5th question -->

            <TextView
                style="@style/question_number"
                android:text="@string/five" />

            <TextView
                style="@style/title"
                android:text="@string/q5_title" />

            <TextView
                style="@style/question"
                android:text="@string/q5_question" />

            <RadioGroup
                android:id="@+id/radio_group_q5"
                style="@style/radio">

                <RadioButton
                    android:id="@+id/radio_q5_h1"
                    style="@style/hypothesis"
                    android:text="@string/q5_hyp1" />

                <RadioButton
                    android:id="@+id/radio_q5_h2"
                    style="@style/hypothesis"
                    android:text="@string/q5_hyp2" />

                <RadioButton
                    android:id="@+id/radio_q5_h3"
                    style="@style/hypothesis"
                    android:text="@string/q5_hyp3" />

                <RadioButton
                    android:id="@+id/radio_q5_h4"
                    style="@style/hypothesis"
                    android:text="@string/q5_hyp4" />

            </RadioGroup>

            <TextView
                android:id="@+id/q5_comments"
                style="@style/comments"
                android:text="@string/q5_comment" />

            <Space style="@style/space" />

            <!--                                            6th question -->

            <TextView
                style="@style/question_number"
                android:text="@string/six" />

            <TextView
                style="@style/title"
                android:text="@string/q6_title" />

            <TextView
                style="@style/question"
                android:text="@string/q6_question" />

            <RadioGroup
                android:id="@+id/radio_group_q6"
                style="@style/radio">

                <RadioButton
                    android:id="@+id/radio_q6_h1"
                    style="@style/hypothesis"
                    android:text="@string/q6_hyp1" />

                <RadioButton
                    android:id="@+id/radio_q6_h2"
                    style="@style/hypothesis"
                    android:text="@string/q6_hyp2" />

                <RadioButton
                    android:id="@+id/radio_q6_h3"
                    style="@style/hypothesis"
                    android:text="@string/q6_hyp3" />

                <RadioButton
                    android:id="@+id/radio_q6_h4"
                    style="@style/hypothesis"
                    android:text="@string/q6_hyp4" />

            </RadioGroup>

            <TextView
                android:id="@+id/q6_comments"
                style="@style/comments"
                android:text="@string/q6_comment" />

            <Space style="@style/space" />

            <!--                                            7th question -->

            <TextView
                style="@style/question_number"
                android:text="@string/seven" />

            <TextView
                style="@style/title"
                android:text="@string/q7_title" />

            <TextView
                style="@style/question"
                android:text="@string/q7_question" />

            <RadioGroup
                android:id="@+id/radio_group_q7"
                style="@style/radio">

                <RadioButton
                    android:id="@+id/radio_q7_h1"
                    style="@style/hypothesis"
                    android:text="@string/q7_hyp1" />

                <RadioButton
                    android:id="@+id/radio_q7_h2"
                    style="@style/hypothesis"
                    android:text="@string/q7_hyp2" />

                <RadioButton
                    android:id="@+id/radio_q7_h3"
                    style="@style/hypothesis"
                    android:text="@string/q7_hyp3" />

                <RadioButton
                    android:id="@+id/radio_q7_h4"
                    style="@style/hypothesis"
                    android:text="@string/q7_hyp4" />

            </RadioGroup>

            <Space style="@style/space" />

            <!--                                            8th question -->

            <TextView
                style="@style/question_number"
                android:text="@string/eight" />

            <TextView
                style="@style/title"
                android:text="@string/q8_title" />

            <TextView
                style="@style/question"
                android:text="@string/q8_question" />

            <RadioGroup
                android:id="@+id/radio_group_q8"
                style="@style/radio">

                <RadioButton
                    android:id="@+id/radio_q8_h1"
                    style="@style/hypothesis"
                    android:text="@string/q8_hyp1" />

                <RadioButton
                    android:id="@+id/radio_q8_h2"
                    style="@style/hypothesis"
                    android:text="@string/q8_hyp2" />

                <RadioButton
                    android:id="@+id/radio_q8_h3"
                    style="@style/hypothesis"
                    android:text="@string/q8_hyp3" />

                <RadioButton
                    android:id="@+id/radio_q8_h4"
                    style="@style/hypothesis"
                    android:text="@string/q8_hyp4" />

            </RadioGroup>

            <TextView
                android:id="@+id/q8_comments"
                style="@style/comments"
                android:text="@string/q8_comment" />

            <Space style="@style/space" />

            <!--                                            9th question -->

            <TextView
                style="@style/question_number"
                android:text="@string/nine" />

            <TextView
                style="@style/title"
                android:text="@string/q9_title" />

            <TextView
                style="@style/question"
                android:text="@string/q9_question" />

            <TextView
                android:id="@+id/edit_q9_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hypothesis_textview"
                android:layout_marginLeft="@dimen/question_margin" />

            <TextView
                android:id="@+id/q9_comments"
                style="@style/comments"
                android:text="@string/q9_comment" />

            <Space style="@style/space" />

            <!--                                            10th question -->

            <TextView
                style="@style/question_number"
                android:text="@string/ten" />

            <TextView
                style="@style/title"
                android:text="@string/q10_title" />

            <TextView
                style="@style/question"
                android:text="@string/q10_question" />

            <RadioGroup
                android:id="@+id/radio_group_q10"
                style="@style/radio">

                <RadioButton
                    android:id="@+id/radio_q10_h1"
                    style="@style/hypothesis"
                    android:text="@string/q10_hyp1" />

                <RadioButton
                    android:id="@+id/radio_q10_h2"
                    style="@style/hypothesis"
                    android:text="@string/q10_hyp2" />

                <RadioButton
                    android:id="@+id/radio_q10_h3"
                    style="@style/hypothesis"
                    android:text="@string/q10_hyp3" />

                <RadioButton
                    android:id="@+id/radio_q10_h4"
                    style="@style/hypothesis"
                    android:text="@string/q10_hyp4" />

            </RadioGroup>

            <Button
                android:id="@+id/button_result"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="emailQuizResults"
                android:layout_gravity="center"
                android:background="#5C6BC0"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/white"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
